<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sbornik30</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_label">БЭГ DEFAULT</string>
    <string name="title_label_search">БЭГ / ПОИСК ПО БАЗЕ ДАННЫХ</string>
    <string name="buttitle_info">info</string>
    <string name="buttitle_fav">favorites</string>
    <string name="buttitle_search">search</string>
    <string name="buttitle_netw">friends</string>
    <string name="buttitle_oglav">Content</string>
    <string name="answer">Ответ</string>
    <string name="searchDB">Поиск по БД</string>
    <string name="topic_hint">Введите фразу</string>
    <string name="OK">OK</string>
    <string name="dialog_title">Поздравляем!</string>
    <string name="dialog_message">Вы решили все задачи данного раздела</string>
    <string name="case1">К оглавлению</string>
    <string name="case2">Больше задач</string>
    <string name="dialog_title1">Внимание!</string>
    <string name="dialog_message1">Выход из приложения</string>
    <string name="case3">Выйти</string>
    <string name="case4">Больше задач</string>
    
</resources>