<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MyLightBlue"
    tools:context=".TaskListActivity" >

      <RelativeLayout
        android:id="@+id/RelLayout_TasList0123"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/panel_verh"
        android:paddingBottom="@dimen/bottompanel_vertical_margin"
        android:paddingLeft="@dimen/bottompanel_horizontal_margin"
        android:paddingRight="@dimen/bottompanel_horizontal_margin"
        android:paddingTop="@dimen/bottompanel_vertical_margin" >

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dicon_05" />

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/dicon_01"
            android:contentDescription="@string/buttitle_info"
            android:onClick="goToInfo"
            android:paddingRight="8dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/button_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_info"
            android:background="@drawable/dicon_02"
            android:contentDescription="@string/buttitle_fav"
            android:onClick="goToFavourites"
            android:paddingRight="8dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_fav"
            android:background="@drawable/dicon_03"
            android:contentDescription="@string/buttitle_search"
            android:onClick="goToSearch"
            android:paddingRight="8dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/button_networks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_search"
            android:background="@drawable/dicon_04"
            android:contentDescription="@string/buttitle_netw"
            android:onClick="goToNetworks"
            android:paddingRight="8dp"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinLayout_razdel0000123"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelLayout_TasList0123"
        android:background="@color/MyDarkGray"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/bottompanel_vertical_margin"
        android:paddingTop="@dimen/bottompanel_vertical_margin" >

        <TextView
            android:id="@+id/DetTaskListTitle01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:textColor="@color/White"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinLayout_detailTask01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60sp"
        android:layout_below="@+id/LinLayout_razdel0000123"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/topic"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:hint="@string/topic_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/button_left"
            android:layout_width="50sp"
            android:layout_height="45sp"
            android:onClick="goSearch"
            android:scaleType="fitXY"
            android:text="@string/OK" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinLayout_detailTask01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/MyBlue"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/bottompanel_vertical_margin"
        android:paddingLeft="@dimen/bottompanel_horizontal_margin"
        android:paddingRight="@dimen/bottompanel_horizontal_margin"
        android:paddingTop="@dimen/bottompanel_vertical_margin" >

        <ImageButton
            android:id="@+id/button_left"
            android:layout_width="40sp"
            android:layout_height="35sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="90sp"
            android:background="@drawable/left"
            android:onClick="goBack"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/button_right"
            android:layout_width="40sp"
            android:layout_height="35sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="90sp"
            android:layout_marginRight="5sp"
            android:background="@drawable/rigth"
            android:onClick="goForward"
            android:scaleType="fitXY" />
    </LinearLayout>

</RelativeLayout>